// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform colorHandler 1`] = `
"import { StyleProxy, ColorStyleProxy } from \\"@windijs/helpers\\";
export const bg = createUtility(\\"bg\\")
    .use(() => ({} as Pick<ColorStyleProxy<typeof colors>, \\"$windi.color.colors\\">))
    .init();
"
`;

exports[`Transform configHandler 1`] = `
"import { StyleProxy, ColorStyleProxy } from \\"@windijs/helpers\\";
export const rounded = createUtility(\\"rounded\\")
    .use(() => ({} as Pick<StyleProxy<typeof borderRadiusConfig>, \\"$windi.config.borderRadiusConfig\\">))
    .init();
"
`;

exports[`Transform with cases 1`] = `
"import { StyleProxy, ColorStyleProxy } from \\"@windijs/helpers\\";
export const bg = createUtility(\\"bg\\")
    .use(() => ({} as Pick<ColorStyleProxy<typeof colors>, \\"$windi.color.colors\\">))
    .use(() => ({} as Pick<StyleProxy<typeof backgroundAttachmentConfig>, \\"$windi.config.backgroundAttachmentConfig\\">))
    .use(() => ({} as Pick<StyleProxy<typeof backgroundPositionConfig>, \\"$windi.config.backgroundPositionConfig\\">))
    .use(() => ({} as Pick<StyleProxy<typeof backgroundRepeatConfig>, \\"$windi.config.backgroundRepeatConfig\\">))
    .use(() => ({} as Pick<StyleProxy<typeof backgroundSizeConfig>, \\"$windi.config.backgroundSizeConfig\\">))
    .use(() => ({} as Pick<StyleProxy<typeof backgroundImageConfig>, \\"$windi.config.backgroundImageConfig\\">))
    .case(\\"clip\\", () => ({} as Pick<StyleProxy<typeof backgroundClipConfig>, \\"$windi.config.backgroundClipConfig\\">))
    .case(\\"blend\\", () => ({} as Pick<StyleProxy<typeof blendModeConfig>, \\"$windi.config.blendModeConfig\\">))
    .case(\\"origin\\", () => ({} as Pick<StyleProxy<typeof backgroundOriginConfig>, \\"$windi.config.backgroundOriginConfig\\">))
    .case(\\"opacity\\", () => ({} as Pick<StyleProxy<typeof opacityConfig>, \\"$windi.config.opacityConfig\\">))
    .case(\\"gradient\\", callHandler(buildLinearGradient, meld(() => ({} as Pick<StyleProxy<typeof gradientDirectionConfig>, \\"$windi.config.gradientDirectionConfig\\">), () => ({} as Pick<StyleProxy<typeof gradientConfig>, \\"$windi.config.gradientConfig\\">))))
    .init();
"
`;
